# FfmpegCmd

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/ffmpegdemo/: BaseApplication.java  FfmpegActivity.java  MainActivity.java  Server.java  SocketActivity.java
app/src/main/java/com/example/ffmpegdemo/ffmpeg/call/: CommonCallBack.java  ICallBack.java
app/src/main/java/com/example/ffmpegdemo/ffmpeg/jni/: FFmpegCmd.java  FFmpegCommand.java
app/src/main/java/com/example/ffmpegdemo/ffmpeg/model/: CommandBean.java
app/src/main/java/com/example/ffmpegdemo/ffmpeg/ui/: FFmpegCommandActivity.java  Ffmpeg_MainActivity.java
app/src/main/java/com/example/ffmpegdemo/ffmpeg/ui/adapter/: FFmpegCommandAdapter.java
app/src/main/java/com/example/ffmpegdemo/ffmpeg/ui/vh/: FFmpegCommandViewHolder.java
app/src/main/java/com/example/ffmpegdemo/ffmpeg/utils/: CustomProgressDialog.java  Direction.java  FFmpegUtils.java  FileUtils.java  ImageFormat.java  PermissionsManager.java  ToastUtils.java  Transpose.java
app/src/main/jniLibs/include/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_opt.c
app/src/main/res/layout/: activity_ffmpeg.xml  activity_main_ffmpeg.xml  activity_socket.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
